[package]
name = "sonicd"
version = "0.5.1"
authors = ["Ernest Romero <ernest@unstable.build>"]
description = "client library for Sonicd, a data streaming gateway"
license-file = "LICENSE"
documentation = "http://sonicd.unstable.build/rustdoc"
homepage = "http://sonicd.unstable.build"
repository = "https://github.com/xarxa6/sonicd"
include = [
  "lib/rust/**/*.rs*",
  "cli/**/*.rs*",
  "Cargo.toml",
  "build.rs",
  "Cargo.lock"
]
build = "build.rs"

[features]
# cache = ["threadpool", "num_cpus", "ws", "lazy_static", "env_logger"]
websocket = ["ws"]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[lib]
name = "sonicd"
path = "lib/rust/src/lib.rs"

[[bin]]
name = "sonic"
path = "cli/src/main.rs"

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "*"

[dependencies]
serde = "0.7.11"
error-chain = "0.1.12"
serde_json = { git = "https://github.com/serde-rs/json.git" }
serde_macros = { version = "0.7.11", optional = true }
byteorder = "0.5.3"
nix = { version = "0.6.0", features = ["signalfd"] }
log = "0.3.6"
num_cpus = "*"
lazy_static = "0.1.*"
bytes = "0.3.0"
slab = "*"
time = "*"
pad = "*"

# cli
regex = "0.1.71"
docopt = "0.6.81"
rpassword = "*"
rustc-serialize = "0.3.19"
env_logger = "0.3.3"
ansi_term = "0.7"
ws = { version =  "0.5.0", optional = true }
pbr = { git = "https://github.com/a8m/pb.git" }
# pbr = { path = "../../dev/rust/pb" }


# FIXME cache for now separate toml until
# https://github.com/rust-lang/cargo/pull/2325
# otherwise on non-linux os project does not compile
# threadpool = { version = "*", optional = true }
# num_cpus = { version = "0.2", optional = true }
#
# [[bin]]
# name = "sonicc"
# path = "cache/src/main.rs"
# features = ["cache"]
