[package]
name = "sonicd"
version = "0.5.1"
authors = ["Ernest Romero <ernest@unstable.build>"]
description = "client library for Sonicd, a data streaming gateway"
license-file = "LICENSE"
documentation = "http://sonicd.unstable.build/rustdoc"
homepage = "http://sonicd.unstable.build"
repository = "https://github.com/xarxa6/sonicd"
include = [
  "lib/rust/**/*.rs*",
  "cli/**/*.rs*",
  "Cargo.toml",
  "build.rs"
]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[lib]
name = "sonicd"
path = "lib/rust/src/lib.rs"

[[bin]]
name = "sonic"
path = "cli/src/main.rs"

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "*"

[dependencies]
serde = "0.8.1"
serde_json = "0.8.1"
serde_macros = { version = "0.8.1", optional = true }
error-chain = "0.5.0"
byteorder = "0.5.3"
nix = "0.6.0"
log = "0.3.6"

# cli
regex = "0.1.71"
rpassword = "0.2.3"
docopt = "0.6.81"
rustc-serialize = "0.3.19"
env_logger = "0.3.3"
ansi_term = "0.7"
ws = { version =  "0.5.0", optional = true }
pbr = { git = "https://github.com/a8m/pb.git" }
# pbr = { path = "../../dev/rust/pb" }
