[package]
name = "sonicc"
version = "0.1.0"
authors = ["Ernest Romero <ernest@unstable.build>"]

[[bin]]
name = "sonicc"
path = "src/main.rs"

[dependencies]
env_logger = "*"
log = "*"
threadpool =  "*"
nix = "*"
num_cpus =  "0.2"
ws =   "*"
lazy_static =   "0.1.*"

[dependencies.sonicd]
version = "*"
features = ["websocket"]
path = ".."

#[profile.release]
#debug = true
