[package]
name = "sonicx"
version = "0.1.0"
authors = ["Ernest Romero <ernest@unstable.build>"]

[[bin]]
name = "sonicx"
path = "src/main.rs"

[dependencies]
env_logger = "*"
log = "*"
threadpool =  "*"
nix = "*"
num_cpus =  "0.2"
lazy_static =   "0.1.*"
error-chain = "0.1.12"
byteorder = "0.5.3"
bytes = "0.3.0"

[dependencies.sonicd]
version = "*"
# features = ["websocket"]
path = ".."

[profile.release]
debug = true
