[package]
name = "sonic"
version = "0.5.0"
authors = ["Ernest Romero <ernest@unstable.build>"]

[dependencies]
serde_json = "*"
serde = "*"
serde_macros = "*"
env_logger = "*"
regex = "*"
docopt = "*"
docopt_macros = "*"
rustc-serialize = "*"
log = "*"
pbr = "*"

[dependencies.sonicd]
version = "*"
path = ".."

#[profile.release]
#debug = true
